# Quadcopter-Flight-Controlller

./: Makefile  pyproject.toml  test.ipynb
config/: .pre-commit-config.yaml  .pylintrc
src/: first.py  turnify.py
